[package]
name = "disbin"
version = "0.2.0"
authors = ["hdks"]
license = "MIT"
description = "Binary analysis tool"
readme = "README.md"
homepage = "https://github.com/hideckies/disbin"
keywords = ["binary", "reverse-engineering"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
capstone = "0.12.0"
clap = "4.5.21"
colored = "2.1.0"
goblin = "0.9.2"
md-5 = "0.10.6"
phf = { version = "0.11.2", features = ["macros"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
termimad = "0.31.1"
